itis3135/projects/client/styles/newdefault.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');

/* header */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

body {
	background-color: #f7f3ee;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 25px 50px;
  background: #f7f3ee;
  z-index: 1000;
}

.logo {
  font-size: 28px;
  font-weight: bold;
  width: 100px;
  height: auto;
}

nav a {
  margin-left: 40px;
  text-decoration: none;
  color: #999;
  font-size: 14px;
  letter-spacing: 2px;
}

.nav-list {
  list-style: none;
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0;
}

.nav-list li {
  position: relative;
}

.nav-list a {
  margin-left: 40px;
  text-decoration: none;
  color: #999;
  font-size: 14px;
  letter-spacing: 1px;
  position: relative;
}

.nav-list a::after {
  content: "";
  position: absolute;
  width: 0%;
  height: 2px;
  bottom: -4px;
  left: 0;
  background-color: #999;
  transition: width 0.3s ease;
}

.nav-list a:hover::after {
  width: 100%;
}

.nav-list a:hover {
  color: black;
}

.dropdown-menu {
  position: absolute;
  top: 100%;
  left: 0;

  background: #1a1a1a;
  list-style: none;
  padding: 10px 0;
  margin: 0;
  border-radius: 8px;
  min-width: 180px;

  opacity: 0;
  visibility: hidden;
  transform: translateY(10px);
  pointer-events: none;

  transition: 0.3s ease;
  z-index: 1001;
}

.dropdown-menu li a {
  display: block;
  padding: 10px 20px;
  margin: 0;
  color: #ccc;
}

.dropdown-menu li a:hover {
  background: #333;
  color: #fff;
}

.dropdown:hover .dropdown-menu {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
  pointer-events: auto;
}

.dropdown > a::after {
  content: " ▼";
  font-size: 10px;
}

/* footer */
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 25px 50px;
  background: #f7f3ee;
  border-top: 1px solid #eee;
  font-family: 'Poppins', sans-serif;
  color: #999;
  text-align: center;
}

footer a {
	color: #999;
}

/* home page layout */

.grid-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-auto-rows: 180px;
  gap: 20px;
  padding: 20px;
}

.card {
  position: relative;
  display: block;
  background-size: cover;
  background-position: center;
  border-radius: 15px;
  overflow: hidden;
  text-decoration: none;
  color: white;
}


/* Large left */
.card-1 {
  grid-column: span 2;
  grid-row: span 3;
}

/* Large right */
.card-2 {
  grid-column: span 2;
  grid-row: span 4;
  background-image: url("../img/heads_tails.jpg");
}

/* Video card */
.card-8 {
  grid-column: 1/ span 1;
  grid-row: 4/ span 4;
}

/* Small left cards */
.card-3 {
  grid-column: span 1;
  grid-row: span 2;
  background-image: url("../img/AIP.jpg");
}

.card-4 {
  grid-column: 1/ span 1;
  grid-row: span 2;
  background-image: url("../img/collegeAdmit.jpg");
}


/* Tall right */
.card-6 {
  grid-column: 2/ span 1;
  grid-row: 6/ span 4;
  background-image: url("../img/cinn_saffron.jpg");
}

/* Bottom right */
.card-7 {
  grid-column: 3/ span 2;
  grid-row: 5/ span 3;
  background-image: url("../img/Bassett_MOE_ad.jpg");
  background-position: top center;
}

/* Wide bottom left */
.card-5 {
  grid-column: 3/ span 2;
  grid-row: span 2;
  background-image: url("../img/Scoops.jpg");
}

.card-video {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 15px;
}


.large {
  grid-column: span 2;
  grid-row: span 2;
}

.wide {
  grid-column: span 2;
}

.tall {
  grid-row: span 2;
}

.small {
  grid-column: span 1;
  grid-row: span 1;
}

.overlay {
  position: absolute;
  bottom: 20px;
  left: 20px;
  color: white;
}

.overlay-heading,
.overlay-subtitle {
  margin-bottom: 10px;
}

.overlay button {
  padding: 8px 16px;
  border: none;
  background: white;
  color: black;
  cursor: pointer;
}

.card {
  display: block;
  position: relative;
  text-decoration: none;
  color: white;
  overflow: hidden;

  border-radius: 15px;
}

.card::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0,0,0,0.65);
  opacity: 0;
  transition: 0.3s;

  border-radius: 15px;
}

.card-overlay {
  position: absolute;
  inset: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  opacity: 0;
  transform: translateY(20px);
  transition: all 0.3s ease;
  text-align: center;
  letter-spacing: 2px;
  font-family: 'Poppins', sans-serif;
}

.card-overlay p {
  font-family: 'Poppins', sans-serif;
  font-weight: 100;
}

.card:hover::before {
  opacity: 1;
}

.card:hover .card-overlay {
  opacity: 1;
  transform: translateY(0);
}

.card:hover {
  transform: scale(1.02);
  transition: transform 0.3s ease;
}


.project-link {
  display: inline-block;
  margin-bottom: 30px;
  color: #888;
  text-decoration: none;
}

.project-link:hover {
  text-decoration: underline;
}

hr {
  border: none;
  border-top: 1px solid #ccc;
  margin: 30px 0;
}

.services p {
  margin-bottom: 10px;
  color: #777;
}

@media (max-width: 900px) {
  .grid-container {
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
  }
  .card {
    grid-column: auto !important;
    grid-row: auto !important;
    height: 250px;
  }
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

.menu-btn {
  font-size: 24px;
  background: none;
  border: none;
  cursor: pointer;
  color: #333;
}

.sidebar {
  position: fixed;
  top: 0;
  right: -300px;
  width: 300px;
  height: 100vh;
  background: #111;

  display: flex;
  flex-direction: column;

  transition: right 0.3s ease;
  z-index: 2000;
}

.sidebar.active {
  right: 0;
}

.close-btn {
  align-self: flex-end;
  font-size: 20px;
  background: none;
  border: none;
  color: white;
  cursor: pointer;
  margin-bottom: 30px;
}

.sidebar-nav {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.sidebar-nav a {
  color: #ccc;
  text-decoration: none;
  font-size: 15px;
  font-family: 'Lato', sans-serif;
}

.sidebar-nav a:hover {
  color: white;
}

.top-nav {
  display: flex;
  gap: 40px;
}

.top-nav a {
  margin-left: 40px;
  text-decoration: none;
  color: #999;
  font-size: 14px;
  letter-spacing: 1px;
  font-weight: 500;
  position: relative;
}

.top-nav a::after {
  content: "";
  position: absolute;
  width: 0%;
  height: 2px;
  bottom: -4px;
  left: 0;
  background-color: #999;
  transition: width 0.3s ease;
}

.top-nav a:hover::after {
  width: 100%;
}

.top-nav a:hover {
  color: black;
}

.overlay {
  position: fixed;
  inset: 0;
  background: rgba(0,0,0,0.5);

  opacity: 0;
  pointer-events: none;
  transition: 0.3s;
  z-index: 1500;
}

.overlay.active {
  opacity: 1;
  pointer-events: auto;
}

#portfolio-link::after {
  content: "►";
  margin-left: 6px;
  display: inline-block;
  transition: transform 0.3s ease;
}

#portfolio-link:hover {
  transform: rotate(90deg);
}

